--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/SCA_SocioEconomico
 excludes=
 file.reference.flatlaf-3.6.jar=C:\\Users\\jobno\\Downloads\\flatlaf-3.6.jar
 
+file.reference.flatlaf-3.6.jar-1=C:\\Users\\Sergi\\Downloads\\flatlaf-3.6.jar
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\jobno\\OneDrive\\Escritorio\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.3.0.jar=C:\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 includes=**
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.6.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.flatlaf-3.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
