--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,12 +38,13 @@ excludes=
 file.reference.Downloads-flatlaf=C:\\Users\\Lizbetg P. Guill\u00e9n\\Downloads\\flatlaf
 file.reference.flatlaf-3.6.jar=C:\\Users\\jobno\\Downloads\\flatlaf-3.6.jar
 
+file.reference.mysql-connector-j-9.3.0.jar=C:\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.6.jar}:\
     ${libs.absolutelayout.classpath}:\
-
+    ${file.reference.mysql-connector-j-9.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -52,8 +53,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=24
-javac.target=24
+javac.source=23
+javac.target=23
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
